recursion.cons.lessons.recursion.cons.PlusOne.scala.error
plusOne:3: error: ';' expected but '[' found.
	return [1+ l.head]
               ^